package raspberry;

import java.util.Scanner;

import application.AppConnection;
import application.IStringCommandCallback;
import device.Device;
import device.DeviceCommandDispatcher;
import device.DeviceCommandRequest;
import mqtt.MqttConnectionConfiguration;

public class DeviceClient implements IStringCommandCallback {
	private int placeID;
	private int deviceID;
	private int option = -1;
	private Device device;
	
	public DeviceClient(int placeID, int deviceID) {
		this.placeID = placeID;
		this.deviceID = deviceID;
		device = new DeviceRaspberry(placeID, deviceID, 0);
	}
	
	public boolean receivedStringCommand(String command) {
		boolean retval = false;
		
		DeviceCommandRequest[] commands = DeviceCommandRequest.createDeviceCommandRequest(command);
		
		if(commands.length > 0) {
			for (DeviceCommandRequest deviceCommandRequest : commands) {
				DeviceCommandDispatcher.processCommandRequest(device, deviceCommandRequest);
			}
			retval = true;
		}
		
		return retval;
	}
	
	public void createDeviceClient() {
		Scanner scanner = new Scanner(System.in);
		
		System.out.println("Device " + deviceID + " on place " + placeID + " connecting...");
		
		AppConnection connection = new AppConnection(new MqttConnectionConfiguration(), this);
		boolean result = connection.connect();
		device.setDeviceCommandsCallback(connection);
		
		System.out.println("Connection : " + result);		

		while (option != 0) {
			System.out.println("1 - Device on");
			System.out.println("2 - Device off");
			System.out.println("0 - exit");
			System.out.println("Enter option selected:");
			option = scanner.nextInt();
			
			switch (option) {
			case 1:
				device.on();
				break;
			case 2:
				device.off();
				break;
			default:
				break;
			}
		}
		
		System.out.println("Closing device client... almost done... waiting for disconnection...");

		//scanner.close();
		
		System.out.println("Disconnection : " + (connection.disconnect() ? "OK" : "FAIL"));
		
		System.out.println("Bye!");		
	}
}
